# Anima

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: dpo_qwen3b.yaml  eval.yaml  formal_v1_dpo_rolebench.yaml  formal_v1_eval_rolebench.yaml  formal_v1_grpo_rolebench.yaml  formal_v1_sft_rolebench.yaml  formal_v2_eval.json  grpo_qwen3b.yaml  official_reset_sft_overfit4.yaml  sft_qwen3b.yaml
scripts/: backup_now.sh  build_formal_v2_eval_package.py  download_datasets.sh  download_formal_v2_eval_sources.sh  featurize_setup.sh  formal_v1_server_run.sh  formal_v2_eval_server_run.sh  validate_gold_examples.py
src/anima/: __init__.py
src/anima/data/: __init__.py  build_dpo_pairs.py  build_formal_rolebench.py  build_hsr_march7th.py  build_reset_dataset.py  build_reward_records.py  character_split.json  make_character_split.py  schemas.py  source_ledger.py  synth_deepseek.py  validators.py
src/anima/eval/: __init__.py  aggregate_results.py  build_w4_eval_slices.py  generate_rollouts.py  run_ceval.py  run_charactereval.py  run_heldout.py  run_socialbench.py
src/anima/rewards/: __init__.py  attribute_bleu.py  char_norm.py  combine.py  focus_overlap.py  format_reward.py  parsing.py  (+1 more)
tests/: test_build_formal_rolebench.py  test_build_reset_dataset.py  test_generate_rollouts.py  test_parsing.py  test_rewards_attr.py  test_rewards_focus.py  test_rewards_reference.py  test_source_ledger.py  test_train_chat_template.py  test_validators.py
tests/fixtures/: README.md  gold_examples_template.jsonl  mcq_toy.jsonl  reward_toy_public.jsonl
(+12 files in other folders)
